fixed issues